refactor: refactor Product Tests and implements ProductTestBuilder